se cambia pantalla de menu y se arrlega fixtures de ligas y equipos seguidos

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Ecommerce App MVVM</string>
+    <string name="app_name">UNIFOT</string>
     <string name="select_language">Select language</string>
     <string name="home_title">Home</string>
     <string name="login_title">Sign In</string>
 </resources>
-
