--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Ecommerce App MVVM</string>
-    <string name="select_language">Select language</string>
+    <string name="select_language">Selecionar Lenguaje Portu</string>
     <string name="home_title">Home</string>
-    <string name="login_title">Sign In</string>
+    <string name="login_title">Entrao Sesione</string>
 </resources>
-
