--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,105 @@
-
 <resources>
-    <string name="app_name">Ecommerce App MVVM</string>
+    <string name="app_name">UNIFOT</string>
     <string name="select_language">Seleccionar idioma</string>
-    <string name="home_title">Inicio</string>
-    <string name="login_title">Iniciar Sesion</string>
+
+    <!-- Link login -->
+    <string name="link_card_login_title">Iniciar sesión</string>
+    <string name="link_card_login_notnow_option">Ahora no</string>
+    <string name="link_card_login_login_option">Iniciar sesión</string>
+
+    <!-- Menú principal -->
+    <string name="menu_principal_prode">Prode</string>
+    <string name="menu_principal_matches">Partidos</string>
+    <string name="menu_principal_leagues">Ligas</string>
+    <string name="menu_principal_follow">Siguiendo</string>
+    <string name="menu_principal_mas">Más</string>
+
+    <!-- Matches Screen -->
+    <string name="matches_screen_today_title">Hoy</string>
+    <string name="matches_screen_yesterday_title">Ayer</string>
+    <string name="matches_screen_tomorrow_title">Mañana</string>
+    <string name="matches_screen_follow_title">Siguiendo</string>
+    <string name="matches_screen_other_matches">Otros partidos</string>
+
+    <!-- Más Screen -->
+    <string name="mas_screen_title">Más</string>
+    <string name="mas_screen_login_title">Iniciar sesión</string>
+    <string name="mas_screen_logout_title">Cerrar sesión</string>
+    <string name="mas_screen_theme_title">Tema</string>
+    <string name="mas_screen_language_title">Idioma</string>
+    <string name="mas_screen_shared_title">Compartir UNIFOT</string>
+    <string name="mas_screen_follow_title">Síguenos</string>
+    <string name="mas_screen_policy_title">Política de privacidad</string>
+    <string name="mas_screen_version_title">Versión de la app</string>
+
+    <!-- Prode Screen -->
+    <string name="prode_screen_title">Prode</string>
+    <string name="prode_screen_ligas_que_sigo_title">Siguiendo</string>
+    <string name="prode_screen_explorar_ligas_title">Explorar ligas</string>
+    <string name="prode_screen_rank_title">Ranking</string>
+    <string name="prode_screen_buscar_ligas_placeholder">Buscar ligas</string>
+    <string name="prode_screen_participar_button">Participar</string>
+    <string name="prode_screen_ver_button">Ver</string>
+    <string name="prode_screen_participando_subtitle">Participando</string>
+
+    <!-- Ligas -->
+    <string name="ligas_screen_title">Ligas</string>
+    <string name="ligas_screen_buscar_placeholder">Buscar ligas</string>
+    <string name="ligas_screen_siguiendo_title">Siguiendo</string>
+    <string name="ligas_screen_explorar_title">Explorar ligas</string>
+    <string name="ligas_screen_follow_button">Seguir</string>
+
+    <!-- Siguiendo -->
+    <string name="siguiendo_screen_title">Siguiendo</string>
+    <string name="siguiendo_screen_equipos_title">Equipos</string>
+    <string name="siguiendo_screen_jugadores_title">Jugadores</string>
+    <string name="siguiendo_screen_jugadores_sugeridos_title">Jugadores sugeridos</string>
+    <string name="siguiendo_screen_equipos_sugeridos_title">Equipos sugeridos</string>
+    <string name="siguiendo_screen_followiguiendo_screen_follow_button">Seguir</string>
+
+    <!-- Prode - Mis Predicciones -->
+    <string name="prode_mispredicciones_screen_title">Mis predicciones</string>
+    <string name="prode_mispredicciones_screen_seleccionar_resultado_label">Seleccionar resultado</string>
+    <string name="prode_mispredicciones_screen_resultado_valor_gana">Gana local</string>
+    <string name="prode_mispredicciones_screen_resultado_valor_empate">Empate</string>
+    <string name="prode_mispredicciones_screen_resultado_valor_visita">Gana visitante</string>
+    <string name="prode_mispredicciones_screen_editar_button">Editar</string>
+    <string name="prode_mispredicciones_screen_guardar_button">Guardar</string>
+
+    <!-- Detalle Partido -->
+    <string name="matches_detail_screen_option_alineacion_title">Alineación</string>
+    <string name="matches_detail_screen_option_clasificacion_title">Clasificación</string>
+    <string name="matches_detail_screen_option_caraacara_title">Cara a cara</string>
+    <string name="matches_detail_screen_option_estatisticas_title">Estadísticas</string>
+
+    <!-- Ligas Detalle -->
+    <string name="ligas_detail_screen_option_clasificacion_title">Clasificación</string>
+    <string name="ligas_detail_screen_option_partidos_title">Partidos</string>
+    <string name="ligas_detail_screen_option_temporadas_title">Temporadas</string>
+    <string name="ligas_detail_screen_siguiendo_label">Siguiendo</string>
+    <string name="ligas_detail_screen_clasificacion_equipo_label">Equipo</string>
+
+    <!-- Equipos Detalle -->
+    <string name="team_detail_screen_option_resumen_title">Resumen</string>
+    <string name="team_detail_screen_option_partidos_title">Partidos</string>
+    <string name="team_detail_screen_option_estadisticas_title">Estadísticas</string>
+    <string name="team_detail_screen_siguiendo_label">Siguiendo</string>
+    <string name="team_detail_screen_proximo_partido_title">Próximo partido</string>
+    <string name="team_detail_screen_ultimos5_title">Últimos 5 partidos</string>
+    <string name="team_detail_screen_estadio_title">Estadio</string>
+    <string name="team_detail_screen_clasificacion_title">Clasificación</string>
+
+    <!-- Jugadores Detalle -->
+    <string name="jugador_detail_screen_option_perfil_title">Perfil</string>
+    <string name="jugador_detail_screen_option_estadisticas_title">Estadísticas</string>
+    <string name="jugador_detail_screen_option_partidos_title">Partidos</string>
+    <string name="jugador_detail_screen_option_trayectoria_title">Trayectoria</string>
+    <string name="jugador_detail_screen_perfil_edad_label">Edad</string>
+    <string name="jugador_detail_screen_perfil_estatura_label">Estatura</string>
+    <string name="jugador_detail_screen_perfil_peso_label">Peso</string>
+    <string name="jugador_detail_screen_perfil_nacionalidad_label">Nacionalidad</string>
+    <string name="jugador_detail_screen_perfil_lesionado_label">Lesionado</string>
+    <string name="jugador_detail_screen_perfil_nacimiento_label">Fecha de nacimiento</string>
+    <string name="jugador_detail_screen_perfil_nacimiento_lugar_label">Lugar de nacimiento</string>
+    <string name="jugador_detail_screen_perfil_nacimiento_pais_label">País de procedencia</string>
 </resources>
