se termina modulo idiomas

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- chino simplificado -->
     <string name="app_name">UNIFOT</string>
     <string name="select_language">选择语言</string>
 
